# retrieve-cheaply

./: .gitignore  PAPER.md  README.md  REPORT.md  WRITEUP.md  bibliography.md  log.md  pyproject.toml
docs/: bibliography_efficiency.bib  external_validity_recon.md  real_repo_experiment_plan.md  real_repo_plan.md  real_repo_progress.md
evidence/: claim_ledger.md  manifest.json  protocols.md
runs/: README.md
runs/agent/: .grpo_note  .monitor_state  27b_base.json  27b_retest.json  cover3_sft.json  effic_27b_curprompt.json  effic_readtrained_retest.json  effic_retest_base.json  effic_retest_sft.json  er2_27b_base.json  er2_27b_readonly.json  er2_27b_trained.json  er2_7b_readonly.json  er2_base.json  er2_trained.json  er2_trained_lspdefn.json  er_base.json  er_trained.json  fr_deepseek_readonly.json  fr_deepseek_withdefn.json  fr_sonnet45_readonly.json  fr_sonnet45_withdefn.json  gd2_deepseek_nocheck.json  gd2_deepseek_realistic.json  gd2_deepseek_withcheck.json  gd2_sonnet45_nocheck.json  gd2_sonnet45_realistic.json  gd2_sonnet45_withcheck.json  gd_deepseek_nocheck.json  gd_deepseek_withcheck.json  gd_sonnet45_nocheck.json  gd_sonnet45_withcheck.json  grpo_harvest_0.json  grpo_harvest_1.json  grpo_harvest_2.json  grpo_harvest_3.json  grpo_harvest_4.json  grpo_retest.json  grpo_retest_round1.json  item1_nodel_post.json  (+56 more)
runs/pilot/: checker_case_series_qwen36_27b_6a9e13bd.json  checker_case_series_qwen36_27b_6a9e13bd_s1.json  checker_drafts_14b.json  checker_drafts_14b_ext.json  checker_drafts_7b.json  checker_drafts_7b_smoke.json  checker_gate_qwen35_27b_pilot3.json  checker_gate_v3_qwen35_27b_pilot.json  checker_hidden_qwen35_27b_multiline_pilot3.json  navigation_all.json  navigation_positive.json  navigation_positive_floor_failed_v1.json  navigation_positive_invalid_v0.json  navigation_v2_positive.json  navigation_v2_qwen25coder14b-aedcc2d4-pilot001_positive.json  navigation_v2_qwen25coder14b-aedcc2d4-pilot001_span_control.json  navigation_v2_qwen36-27b-6a9e13bd-pilot001_positive.json  navigation_v2_qwen36-27b-6a9e13bd-pilot002_all.json  navigation_v2_qwen36-27b-6a9e13bd-pilot002_positive.json  navigation_v2_qwen36-27b-6a9e13bd-pilot002_span_control.json  navigation_v2_reread_api_deepseek_apparatus.json  (+7 more)
scaffold/: mock_env.py  real_env.py  stream_agent.py  tooling.py
scripts/: README.md  _cover3_run.sh  analyze_runtime.py  api_agent.py  build_manifest.py  common.sh  grpo_cost.py  harvest_sft.py  make_figures.py  real_mf.py  real_repo_loader.py  resolver_coverage_audit.py  run_checker_case_series.sh  run_checker_gate_v2.sh  run_checker_gate_v3.sh  run_checker_hidden.sh  run_checker_paired.sh  run_effic_real.sh  run_frontier.sh  run_gapd2_frontier.sh  run_gapd_frontier.sh  run_grpo.sh  run_lsp_headline.sh  run_navigation_confirmation.sh  run_navigation_pilot.sh  run_real_lsp_headline.sh  run_relabel2.sh  run_relabel2_27b.sh  run_runtime_frontier.sh  run_seeds_ext.sh  run_substitution_train.sh  run_toolablation.sh  sft_lora.py  smoke_real_env.py  synth_acd.py  synth_mf.py  synth_tasks_authoring.py  synth_tasks_cover3.py  synth_tasks_effic.py  synth_tasks_effic_nodel.py  (+9 more)
tests/: test_experiments.py
(+87 files in other folders)
