[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "streams"
dynamic = ["version"]
description = "Language servers help coding agents by making retrieval cheaper, not by adding context"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "transformers",
    "peft",
    "accelerate",
]

[project.optional-dependencies]
# `pip install -e '.[dev]'` for the development stack.
dev = [
    "pytest",
]
# `pip install -e '.[api]'` to drive frontier models via OpenRouter (scripts/api_agent.py).
api = [
    "openai",
]

[project.urls]
Homepage = "https://github.com/ianbarber/retrieve-cheaply"
Repository = "https://github.com/ianbarber/retrieve-cheaply"

[tool.setuptools]
packages = ["scaffold", "scripts", "scripts.analysis"]

[tool.setuptools_scm]
write_to = "_version.py"
