[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "streams"
dynamic = ["version"]
description = "Experiments on types, language servers, and retrieval for coding agents"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "transformers",
    "peft",
    "accelerate",
]

[project.optional-dependencies]
# `pip install -e '.[dev]'` for the development stack.
dev = [
    "pytest",
    "pyrefly==1.0.0",
]
analysis = [
    "matplotlib",
]
# `pip install -e '.[api]'` to drive frontier models via OpenRouter (scripts/api_agent.py).
api = [
    "openai",
    "requests",
]
# `pip install -e '.[realbench]'` for the real-repo SWE-bench experiment (scripts/realbench/).
realbench = [
    "datasets",
    "mini-swe-agent",
    "swebench",
]

[project.urls]
Homepage = "https://github.com/ianbarber/lsps-for-llms"
Repository = "https://github.com/ianbarber/lsps-for-llms"

[tool.setuptools]
packages = ["scaffold", "scripts", "scripts.analysis", "scripts.experiments"]

[tool.setuptools_scm]
write_to = "_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
